manifest/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: ingress01
  namespace: default
spec:
  tls:
  - hosts:
    - welcome.tani-exe.f5.si
    secretName: example-app-tls
  rules:
  - host: "welcome.tani-exe.f5.si"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx01
            port:
              number: 80
  - host: "dashboard.tani-exe.f5.si"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 80
