manifest/ingress/ingress01.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 10000m
  name: ingress01
  namespace: default
spec:
  tls:
  - hosts:
    - tani-exe.f5.si
    secretName: welcome-app-tls
  - hosts:
    - cloud.tani-exe.f5.si
    secretName: cloud-tls
  - hosts:
    - api.result-database.tani-exe.f5.si
    secretName: result-api-tls
  - hosts:
    - console.s3.4513echo.tani-exe.f5.si
    secretName: echo4513-minio-console-tls
  - hosts:
    - s3.4513echo.tani-exe.f5.si
    secretName: echo4513-minio-tls
  rules:
  - host: tani-exe.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx01
            port:
              number: 80
  - host: cloud.tani-exe.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud
            port:
              number: 80
  - host: api.result-database.tani-exe.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-api
            port:
              number: 80
  - host: console.s3.4513echo.tani-exe.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo4513-minio
            port:
              number: 9090
  - host: s3.4513echo.tani-exe.f5.si
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo4513-minio
            port:
              number: 9000
