manifest/ingress/ingress02.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/configuration-snippet: |-
      proxy_ssl_server_name on;
      proxy_ssl_name $host;
  name: ingress02
  namespace: kubernetes-dashboard
spec:
  tls:
  - hosts:
    - dashboard.tani-exe.f5.si
    secretName: dashboard-tls
  rules:
  - host: "dashboard.tani-exe.f5.si"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-dashboard
            port:
              number: 443
