manifest/ingress/ingress03.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: ingress03
  namespace: argocd
spec:
  tls:
  - hosts:
    - argocd.tani-exe.f5.si
    secretName: argocd-tls
  rules:
    - host: argocd.tani-exe.f5.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
